--- a/assets/styles/_fonts.scss
+++ b/assets/styles/_fonts.scss
@@ -5,6 +5,6 @@
  *
  * @author      ThatMuch
  * @version     0.1.0
- * @since       idProtect_1.0.0.0
+ * @since       heptalytics_1.0.0.0
  *
  */
