--- a/assets/styles/admin/login.scss
+++ b/assets/styles/admin/login.scss
@@ -3,7 +3,7 @@
 
 body.login h1 a {
     margin: 0 auto;
-    background-image: url("../../images/logo_idprotect.png");
+    background-image: url("../../images/logo_heptalytics.png");
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
