--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: ID Protect
+Theme Name: Heptalytics
 Theme URI: https://wordpress.org/themes/twentytwenty/
 Author: THATMUCH
 Author URI: https://thatmuch.fr.
