--- a/assets/styles/admin/login.scss
+++ b/assets/styles/admin/login.scss
@@ -49,5 +49,5 @@ input:-webkit-autofill:active {
 
 body.login {
     background: linear-gradient(180deg, #e8effb -2.99%, #fff 49.58%);
-    font-family: "Raleway", sans-serif;
+    font-family: $text-ff;
 }
