--- a/assets/styles/_vars.scss
+++ b/assets/styles/_vars.scss
@@ -25,22 +25,23 @@ $element_width_mobile: 95vw; // default width of the .element content-div
 /*==================================================================================
   COLORS
 ==================================================================================*/
+@use "sass:color";
 
 /* Presets
 /––––––––––––––––––––––––*/
-$color-primary: #171c60;
-$color-primary-darker: darken($color-primary, 7%);
-$color-primary-lighter: lighten($color-primary, 7%);
-$color-secondary: #ff7551;
-$color-secondary-darker: darken($color-secondary, 7%);
-$color-tertiary: #1956a8;
-$color-tertiary-darker: darken($color-tertiary, 7%);
-$color-black: #212529;
+$color-primary: #3c98ed;
+$color-primary-darker: color.adjust($color-primary, $lightness: -7%);
+$color-primary-lighter: color.adjust($color-primary, $lightness: 7%);
+$color-secondary: #ff7253;
+$color-secondary-darker: color.adjust($color-secondary, $lightness: -7%);
+$color-tertiary: #7ad6c6;
+$color-tertiary-darker: color.adjust($color-tertiary, $lightness: 7%);
+$color-black: #131327;
 $color-dark: #343a40;
 $color-grey2: #495057;
 $color-grey1: #868e96;
 $color-grey: #f2f2f2;
-$color-light: #f7f7f7;
+$color-light: #f2f7ff;
 
 /*=============================================
   FONTS
@@ -49,7 +50,7 @@ $color-light: #f7f7f7;
 /* set base values */
 $text-fz: 1em;
 $text-scale-ratio: 1.2;
-$text-ff: "Raleway", sans-serif;
+$text-ff: "PlusJakartaSans", sans-serif;
 $text-c: $color-dark;
 $text-fw: 400;
 $text-lh: 1.5;
@@ -103,8 +104,8 @@ $nav__spacercolor: $color-dark;
 
 /* ANCHORS
 /––––––––––––––––––––––––*/
-$a__linkcolor: $color-primary;
-$a__hovercolor: darken($color-primary, 20);
+$a__linkcolor: $color-dark;
+$a__hovercolor: $color-black;
 $a__textdecoration: none;
 
 /*==================================================================================
