--- a/assets/styles/admin/admin.scss
+++ b/assets/styles/admin/admin.scss
@@ -6,7 +6,7 @@
     background-repeat: no-repeat;
     background-color: #f5f9ff;
     font-weight: 500;
-    font-family: "Raleway", sans-serif;
+    font-family: $text-ff;
 
     .postbox,
     .updated,
@@ -33,10 +33,10 @@
     #adminmenu .wp-submenu,
     #adminmenuback,
     #adminmenuwrap {
-        background-color: $color-primary;
+        background-color: $color-black;
     }
     #wpadminbar {
-        background-color: $color-primary-darker;
+        background-color: $color-primary;
     }
 
     #adminmenu .wp-has-current-submenu .wp-submenu .wp-submenu-head,
@@ -44,14 +44,14 @@
     #adminmenu .wp-menu-arrow div,
     #adminmenu li.current a.menu-top,
     #adminmenu li.wp-has-current-submenu a.wp-has-current-submenu {
-        background: $color-primary-lighter;
+        background: $color-primary;
         color: #fff;
     }
 
     #adminmenu li.menu-top:hover,
     #adminmenu li.opensub > a.menu-top,
     #adminmenu li > a.menu-top:focus {
-        background: $color-primary-lighter;
+        background: $color-primary;
         color: #fff;
     }
 
