--- a/assets/styles/atoms/_headings.scss
+++ b/assets/styles/atoms/_headings.scss
@@ -6,32 +6,43 @@
  *
  */
 
-h1, h2, h3, h4, h5, h6 {
-    font-family: "Rubik", sans-serif;
-    color: $color-primary;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-weight: 700;
+    font-family: $text-ff;
     text-transform: uppercase;
 }
 
-h1, .h1 {
+h1,
+.h1 {
     @include responsive-font-size(48, 60, bold);
 }
 
-h2, .h2 {
+h2,
+.h2 {
     @include responsive-font-size(30, 48, bold);
 }
 
-h3, .h3 {
+h3,
+.h3 {
     @include responsive-font-size(24, 36, bold);
 }
 
-h4, .h4 {
+h4,
+.h4 {
     @include responsive-font-size(20, 30, null);
 }
 
-h5, .h5 {
+h5,
+.h5 {
     @include responsive-font-size(18, 24, null);
 }
 
-h6, .h6 {
+h6,
+.h6 {
     @include responsive-font-size(16, 24, null);
 }
