--- a/assets/styles/molecules/_pagination.scss
+++ b/assets/styles/molecules/_pagination.scss
@@ -5,3 +5,30 @@
  * @since       heptalytics_1.0.0.0
  *
  */
+.pagination {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 1.5rem;
+    .page-numbers {
+        color: $color-primary;
+        &:not(.next):not(.prev) {
+            display: inline-block;
+            transition: background-color 0.3s;
+            margin: 0 0.25rem;
+            border: 1px solid $color-primary;
+            border-radius: 100%;
+            padding: 0.5rem;
+            width: 42px;
+            height: 42px;
+            text-align: center;
+            &.current {
+                background-color: $color-primary;
+                color: white;
+            }
+            &:hover {
+                background-color: $color-primary;
+                color: white;
+            }
+        }
+    }
+}
