--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -33,7 +33,7 @@
 /*================================================================================== ATOMIC DESIGN/ ==================================================================================*/
 /*=====  Atoms  ======*/
 /** @author      ThatMuch @version     0.1.0 @since       heptalytics_1.0.0.0 */
-.btn, .single_add_to_cart_button, .wc-block-cart__submit-button, .wc-block-components-totals-coupon__button { -ms-flex-align: center; -webkit-box-align: center; align-items: center; background: #FFFFFF; border-radius: 7px; color: var(--blue); display: -ms-inline-flexbox; display: -webkit-inline-box; display: inline-flex; font-family: "Raleway", sans-serif; font-size: 13px; font-weight: 700; letter-spacing: 0.5px; padding: 10px 15px; text-align: center; text-transform: uppercase; }
+.btn, .single_add_to_cart_button, .wc-block-cart__submit-button, .wc-block-components-totals-coupon__button { -ms-flex-align: center; -webkit-box-align: center; align-items: center; background: #FFFFFF; border-radius: 7px; color: var(--blue); display: -ms-inline-flexbox; display: -webkit-inline-box; display: inline-flex; font-family: "PlusJakartaSans", sans-serif; font-size: 13px; font-weight: 700; letter-spacing: 0.5px; padding: 10px 15px; text-align: center; text-transform: uppercase; }
 
 .btn.btn__primary, .single_add_to_cart_button.btn__primary, .wc-block-cart__submit-button.btn__primary, .wc-block-components-totals-coupon__button.btn__primary { background: var(--blue); color: #fff; }
 
@@ -47,7 +47,7 @@
 
 .woocommerce:where(body:not(.woocommerce-block-theme-has-button-styles)) button.button.alt:hover, .woocommerce:where(body:not(.woocommerce-block-theme-has-button-styles)) button.button.alt:active, .woocommerce:where(body:not(.woocommerce-block-theme-has-button-styles)) button.button.alt:focus, body:not(.woocommerce-block-theme-has-button-styles) .wc-block-components-button:not(.is-link):hover, body:not(.woocommerce-block-theme-has-button-styles) .wc-block-components-button:not(.is-link):active, body:not(.woocommerce-block-theme-has-button-styles) .wc-block-components-button:not(.is-link):focus { color: #fff; background-color: #0F3465; }
 
-.btn__white { background: #FFFFFF; border-radius: 7px; letter-spacing: 0.5px; text-transform: uppercase; text-align: center; font-weight: 700; font-family: "Raleway", sans-serif; color: var(--blue); padding: 10px 15px; display: -webkit-inline-box; display: -ms-inline-flexbox; display: inline-flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
+.btn__white { background: #FFFFFF; border-radius: 7px; letter-spacing: 0.5px; text-transform: uppercase; text-align: center; font-weight: 700; font-family: "PlusJakartaSans", sans-serif; color: var(--blue); padding: 10px 15px; display: -webkit-inline-box; display: -ms-inline-flexbox; display: inline-flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
 
 .btn__white:hover { background: var(--blue); }
 
@@ -55,7 +55,7 @@
 
 .btn__white img { margin-left: 6px; width: 16px; }
 
-.btn__orange { border: 2px solid #FF8833; border-radius: 7px; padding: 13px 12px; color: #FF8833; text-align: center; letter-spacing: 0.5px; text-transform: uppercase; font-family: "Raleway", sans-serif; }
+.btn__orange { border: 2px solid #FF8833; border-radius: 7px; padding: 13px 12px; color: #FF8833; text-align: center; letter-spacing: 0.5px; text-transform: uppercase; font-family: "PlusJakartaSans", sans-serif; }
 
 .btn__orange:hover { color: #fff; background: #FF8833; }
 
@@ -139,7 +139,7 @@ h6, .h6 { font-size: 1rem; line-height: 1.5; }
 
 html { font-size: 16px; }
 
-body { font-family: "Raleway", sans-serif; background: -webkit-gradient(linear, left top, left bottom, color-stop(-2.99%, #E8EFFB), color-stop(49.58%, #FFFFFF)); background: linear-gradient(180deg, #E8EFFB -2.99%, #FFFFFF 49.58%); font-size: 1rem; }
+body { font-family: "PlusJakartaSans", sans-serif; background: -webkit-gradient(linear, left top, left bottom, color-stop(-2.99%, #E8EFFB), color-stop(49.58%, #FFFFFF)); background: linear-gradient(180deg, #E8EFFB -2.99%, #FFFFFF 49.58%); font-size: 1rem; }
 
 img { max-width: 100%; }
 
@@ -187,11 +187,11 @@ hr.custom { border-color: #1956A8; opacity: 1; margin: 50px auto; max-width: 85%
 
 .header__area .navbar-brand img { height: 100%; width: 100%; -o-object-fit: contain; object-fit: contain; }
 
-.header__area .nav-link { letter-spacing: 0.5px; text-transform: uppercase; font-family: "Raleway", sans-serif; color: var(--blue); margin: 0 30px; isolation: isolate; font-size: .85rem; }
+.header__area .nav-link { letter-spacing: 0.5px; text-transform: uppercase; font-family: "PlusJakartaSans", sans-serif; color: var(--blue); margin: 0 30px; isolation: isolate; font-size: .85rem; }
 
 .header__area .nav-link:hover { color: var(--orange); -webkit-box-shadow: 0px 16px 32px rgba(25, 86, 168, 0.1); box-shadow: 0px 16px 32px rgba(25, 86, 168, 0.1); border-radius: 7px; background: #FFFFFF; }
 
-.header__area .dropdown-item { letter-spacing: 0.5px; text-transform: uppercase; font-family: "Raleway", sans-serif; color: var(--blue); }
+.header__area .dropdown-item { letter-spacing: 0.5px; text-transform: uppercase; font-family: "PlusJakartaSans", sans-serif; color: var(--blue); }
 
 .header__area .dropdown-toggle::after { background: url(../images/arrow-down.svg) no-repeat scroll 0 0/100%; border: 0; width: 10px; height: 6px; vertical-align: 2px; margin-left: 10px; -webkit-transition: 0.2s; transition: 0.2s; }
 
@@ -231,7 +231,7 @@ hr.custom { border-color: #1956A8; opacity: 1; margin: 50px auto; max-width: 85%
 
 @media only screen and (max-width: 991px) { .header__area .navbar-collapse { position: absolute; background: #fff; top: 64px; left: 0; right: 0; -webkit-box-shadow: 0px 16px 32px rgba(25, 86, 168, 0.1); box-shadow: 0px 16px 32px rgba(25, 86, 168, 0.1); } }
 
-.header__link { color: var(--orange); letter-spacing: 0.5px; text-transform: uppercase; font-size: 0.8125rem; line-height: 1.2307692308; font-weight: 700; font-family: "Raleway", sans-serif; text-decoration: none; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-transition: 0.2s; transition: 0.2s; width: 181px; position: relative; }
+.header__link { color: var(--orange); letter-spacing: 0.5px; text-transform: uppercase; font-size: 0.8125rem; line-height: 1.2307692308; font-weight: 700; font-family: "PlusJakartaSans", sans-serif; text-decoration: none; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-transition: 0.2s; transition: 0.2s; width: 181px; position: relative; }
 
 @media (max-width: 768px) { .header__link { font-size: 0.771875rem; line-height: 1.4769230769; } }
 
@@ -297,7 +297,7 @@ hr.custom { border-color: #1956A8; opacity: 1; margin: 50px auto; max-width: 85%
 
 @media only screen and (max-width: 991px) { .footer__area { text-align: center; } }
 
-.footer__area .copyright { color: #E8EFFB; letter-spacing: 0.5px; font-size: 0.8125rem; line-height: 1.2307692308; font-weight: 500; font-family: "Raleway", sans-serif; text-align: right; }
+.footer__area .copyright { color: #E8EFFB; letter-spacing: 0.5px; font-size: 0.8125rem; line-height: 1.2307692308; font-weight: 500; font-family: "PlusJakartaSans", sans-serif; text-align: right; }
 
 @media (max-width: 768px) { .footer__area .copyright { font-size: 0.771875rem; line-height: 1.4769230769; } }
 
@@ -423,7 +423,7 @@ hr.custom { border-color: #1956A8; opacity: 1; margin: 50px auto; max-width: 85%
 
 ::placeholder { font-weight: normal; }
 
-.community__form input:not([type="submit"]), .community__form textarea { border-width: 0 0 1px; border-style: solid; border-color: #384050; background: transparent; color: #384050; font-size: 1rem; line-height: 1.1875; font-weight: 500; font-family: "Raleway", sans-serif; width: 100%; padding: 3px 0; margin: 10px 0 0; }
+.community__form input:not([type="submit"]), .community__form textarea { border-width: 0 0 1px; border-style: solid; border-color: #384050; background: transparent; color: #384050; font-size: 1rem; line-height: 1.1875; font-weight: 500; font-family: "PlusJakartaSans", sans-serif; width: 100%; padding: 3px 0; margin: 10px 0 0; }
 
 @media (max-width: 768px) { .community__form input:not([type="submit"]), .community__form textarea { font-size: 0.95rem; line-height: 1.425; } }
 
@@ -431,7 +431,7 @@ hr.custom { border-color: #1956A8; opacity: 1; margin: 50px auto; max-width: 85%
 
 .community__form textarea { resize: none; height: 120px; }
 
-.community__form p.note { color: #384050; font-size: 0.75rem; line-height: 1.1666666667; font-weight: 400; font-family: "Raleway", sans-serif; margin: 10px 0 0; }
+.community__form p.note { color: #384050; font-size: 0.75rem; line-height: 1.1666666667; font-weight: 400; font-family: "PlusJakartaSans", sans-serif; margin: 10px 0 0; }
 
 @media (max-width: 768px) { .community__form p.note { font-size: 0.7125rem; line-height: 1.4; } }
 
@@ -439,7 +439,7 @@ hr.custom { border-color: #1956A8; opacity: 1; margin: 50px auto; max-width: 85%
 
 .page__area { padding: 30px 0; }
 
-.page__text { font-family: "Raleway", sans-serif; }
+.page__text { font-family: "PlusJakartaSans", sans-serif; }
 
 /* .page__text h1, .page__text h2, .page__text h3, .page__text h4, .page__text h5, .page__text h6 { font-family: "Rubik", sans-serif; text-transform: uppercase; font-weight: 700; margin-bottom: 30px; }
 
@@ -557,7 +557,7 @@ hr.custom { border-color: #1956A8; opacity: 1; margin: 50px auto; max-width: 85%
 
 .blog__featured__text { position: absolute; z-index: 2; bottom: 0; height: 100%; left: 0; width: 100%; padding: 30px; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; -webkit-box-pack: end; -ms-flex-pack: end; justify-content: flex-end; }
 
-.blog__featured__text h4 { font-size: 1rem; line-height: 1.625; font-weight: 600; font-family: "Raleway", sans-serif; }
+.blog__featured__text h4 { font-size: 1rem; line-height: 1.625; font-weight: 600; font-family: "PlusJakartaSans", sans-serif; }
 
 @media (max-width: 768px) { .blog__featured__text h4 { font-size: 0.95rem; line-height: 1.95; } }
 
@@ -575,7 +575,7 @@ hr.custom { border-color: #1956A8; opacity: 1; margin: 50px auto; max-width: 85%
 
 @media only screen and (max-width: 767px) and (max-width: 480px) { .blog__featured__text h2, .blog__featured__text h1 { max-width: 100%; font-size: 1.015625rem; line-height: 1.68; } }
 
-.blog__featured__text p { font-size: 1rem; line-height: 1.625; font-weight: 500; font-family: "Raleway", sans-serif; max-width: 500px; }
+.blog__featured__text p { font-size: 1rem; line-height: 1.625; font-weight: 500; font-family: "PlusJakartaSans", sans-serif; max-width: 500px; }
 
 @media (max-width: 768px) { .blog__featured__text p { font-size: 0.95rem; line-height: 1.95; } }
 
