--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -47,7 +47,7 @@
 // @import "./molecules/_gallery";
 // @import "./molecules/_modal";
 // @import "./molecules/_navigation";
-// @import "./molecules/_pagination";
+@import "./molecules/_pagination";
 // @import "./molecules/_pop-over";
 // @import "./molecules/_search-form";
 // @import "./molecules/_slider";
@@ -61,11 +61,11 @@
 // @import "./organisms/sections";
 
 /*=====  Templates  ======*/
-// @import "./templates/_blog";
-// @import "./templates/_page";
+@import "./templates/_blog";
+@import "./templates/_page";
 // @import "./templates/_post";
 // @import "./templates/_subsite";
-@import "./templates/_product";
+//@import "./templates/_product";
 
 :root {
     --blue: #1956a8;
@@ -77,13 +77,9 @@ html {
 }
 
 body {
-    background:
-        url(../images/bg_default.svg) no-repeat,
-        linear-gradient(180deg, #e8effb -2.99%, #ffffff 49.58%);
-    background-size: cover;
-    color: $color-primary;
+    color: $text-c;
     font-size: 1rem;
-    font-family: "Raleway", sans-serif;
+    font-family: $text-ff;
 }
 
 a {
@@ -409,7 +405,7 @@ hr.custom {
     padding: 3px 0;
     width: 100%;
     color: #384050;
-    font-family: "Raleway", sans-serif;
+    font-family: $text-ff;
 
     @include responsive-font-size(16, 19, 500);
 }
@@ -422,7 +418,7 @@ hr.custom {
 .community__form p.note {
     margin: 10px 0 0;
     color: #384050;
-    font-family: "Raleway", sans-serif;
+    font-family: $text-ff;
 
     @include responsive-font-size(12, 14, 400);
 }
@@ -647,7 +643,7 @@ hr.custom {
 
 .blog__featured__text h4 {
     color: #fff;
-    font-family: "Raleway", sans-serif;
+    font-family: $text-ff;
 
     @include responsive-font-size(16, 26, 600);
 }
@@ -670,7 +666,7 @@ hr.custom {
 
 .blog__featured__text p {
     max-width: 500px;
-    font-family: "Raleway", sans-serif;
+    font-family: $text-ff;
 
     @include responsive-font-size(16, 26, 500);
 }
@@ -776,68 +772,9 @@ hr.custom {
     width: fit-content;
 }
 
-.blog__item__image {
-    position: relative;
-    border-radius: 16px;
-    width: 100%;
-    height: 275px;
-    overflow: hidden;
-}
-
-@media only screen and (max-width: 1200px) {
-    .blog__item__image {
-        height: 205px;
-    }
-}
-
-.blog__item__image img {
-    width: 100%;
-    height: 100%;
-    -o-object-fit: cover;
-    object-fit: cover;
-    -o-object-position: center;
-    object-position: center;
-}
-
-.blog__item__image .blog__link {
-    top: 10px;
-    right: 11px;
-    width: 32px;
-    height: 32px;
-}
-
-.blog__item__image .blog__link img {
-    width: 15px;
-    object-fit: contain;
-}
-
-.blog__item__text {
-    margin-top: 15px;
-}
-
-.blog__item__text h5 {
-    margin: 0 0 5px;
-    font-size: 0.875rem;
-}
-
-.blog__item__text h2 {
-    color: #152235;
-    font-style: normal;
-    font-size: 0.875rem;
-    text-transform: uppercase;
-}
-
-.blog__item__text h2 a {
-    color: #152235;
-}
-
-.blog__list .owl-stage {
-    padding-left: 0px !important;
-}
-
 .article__text {
     color: #152235;
-    font-family: "Raleway";
+    font-family: $text-ff;
 
     @include responsive-font-size(16, 26, 500);
 }
@@ -898,7 +835,7 @@ hr.custom {
 
 .article__body h6 {
     margin: 0;
-    font-family: "Raleway";
+    font-family: $text-ff;
 
     @include responsive-font-size(14, 26, 700);
 }
@@ -1069,7 +1006,7 @@ hr.custom {
 }
 
 .step__list ul.nav-tabs li a .text__body {
-    font-family: "Raleway";
+    font-family: $text-ff;
     -webkit-box-flex: 1;
     -ms-flex: 1;
     flex: 1;
