--- a/blocks/community/style.css
+++ b/blocks/community/style.css
@@ -88,7 +88,7 @@
 }
 
 .community__body p {
-	font-family: "Raleway", sans-serif;
+	font-family: "PlusJakartaSans", sans-serif;
 	font-weight: 500;
 	font-size: 1rem;
 
