--- a/blocks/hero-section/style.css
+++ b/blocks/hero-section/style.css
@@ -35,7 +35,7 @@
     font-weight: 500;
     font-size: 1rem;
     line-height: 1.625;
-    font-family: "Raleway", sans-serif;
+    font-family: "PlusJakartaSans", sans-serif;
     list-style: none;
     @media only screen and (max-width: 991px) {
         margin-left: 0;
