--- a/blocks/link/style.css
+++ b/blocks/link/style.css
@@ -71,7 +71,7 @@
 	font-weight: 500;
 	font-size: 1.3rem;
 	line-height: 1.625rem;
-	font-family: "Raleway", sans-serif;
+	font-family: "PlusJakartaSans", sans-serif;
 }
 
 .promo.professionnels {
