--- a/blocks/section/style.css
+++ b/blocks/section/style.css
@@ -131,7 +131,7 @@
 }
 
 .promotion__bottom p {
-	font-family: "Raleway", sans-serif;
+	font-family: "PlusJakartaSans", sans-serif;
 	font-weight: 500;
 	font-size: 1rem;
 	line-height: 1.625rem;
