--- a/blocks/service/style.css
+++ b/blocks/service/style.css
@@ -180,7 +180,7 @@
 	font-weight: 500;
 	font-size: 1.125rem;
 	line-height: 1.75rem;
-	font-family: "Raleway", sans-serif;
+	font-family: "PlusJakartaSans", sans-serif;
 }
 
 .card__text__image {
@@ -256,7 +256,7 @@
 	font-weight: 500;
 	font-size: 1.125rem;
 	line-height: 1.75rem;
-	font-family: "Raleway", sans-serif;
+	font-family: "PlusJakartaSans", sans-serif;
 	margin-bottom: 25px;
 }
 
