Update background color and font style in Reviews block

--- a/assets/styles/templates/_blog.scss
+++ b/assets/styles/templates/_blog.scss
@@ -35,6 +35,7 @@
             display: block;
             position: relative;
             border-radius: 0.75rem;
+            background-color: $color-grey;
             padding-top: 60%;
             width: 100%;
             overflow: hidden;
