--- a/assets/styles/templates/_blog.scss
+++ b/assets/styles/templates/_blog.scss
@@ -60,7 +60,7 @@
             flex: 1;
             flex-direction: column;
             justify-content: flex-start;
-            padding: 1.5rem;
+            padding: 1.5rem 1rem;
             text-decoration: none;
             h3 {
                 font-size: 1.125rem;
