--- a/assets/styles/templates/_blog.scss
+++ b/assets/styles/templates/_blog.scss
@@ -63,12 +63,91 @@
             padding: 1.5rem 1rem;
             text-decoration: none;
             h3 {
+                // maximum 2 lines then ellipsis
+                display: -webkit-box;
                 font-size: 1.125rem;
                 line-height: 1.5;
+                -webkit-line-clamp: 2;
+                -webkit-box-orient: vertical;
+                overflow: hidden;
             }
             a {
                 color: $color-black;
             }
+        }
+    }
+
+    &__featured {
+        position: relative;
+        margin-bottom: 50px;
+        border-radius: 16px;
+        background-color: $color-grey;
+        height: 500px;
+        overflow: hidden;
+        color: #ffffff;
+        &::after {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            background: -webkit-gradient(linear, left top, left bottom, from(rgba(21, 34, 53, 0)), to(#152235));
+            background: linear-gradient(180deg, rgba(21, 34, 53, 0) 0%, #152235 100%);
+            width: 100%;
+            height: 50%;
+            content: "";
+        }
+        &__text {
+            display: -webkit-box;
+            display: -ms-flexbox;
+            display: flex;
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            z-index: 2;
+            padding: 30px;
+            width: 100%;
+            height: 100%;
+            -webkit-box-orient: vertical;
+            -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+            flex-direction: column;
+            -webkit-box-pack: end;
+            -ms-flex-pack: end;
+            justify-content: flex-end;
+            p {
+                @include responsive-font-size(16, 26, 500);
+            }
+            a {
+                color: #fff;
+            }
+            h4 {
+                color: #fff;
+                font-family: $text-ff;
+
+                @include responsive-font-size(16, 26, 600);
+            }
+            h2,
+            h1 {
+                margin-bottom: 25px;
+                color: #fff;
+                text-transform: uppercase;
+
+                @include responsive-font-size(40, 48, 800);
+            }
+        }
+        .blog__image {
+            width: 100%;
+            height: 100%;
+            -o-object-fit: cover;
+            object-fit: cover;
+            -o-object-position: center;
+            object-position: center;
+        }
+    }
+
+    @media only screen and (max-width: 767px) {
+        .blog__featured__text h2,
+        .blog__featured__text h1 {
+            @include responsive-font-size(25, 30);
         }
     }
 }
