--- a/blocks/Layering/style.css
+++ b/blocks/Layering/style.css
@@ -17,11 +17,15 @@
             gap: 1.5rem;
             border: none;
             border-radius: 10px;
-            background: linear-gradient(180deg, #171c60 12.95%, #080b3a 110.05%);
+            background: linear-gradient(180deg, #2d2d50 -12.32%, #131327 110.05%);
             padding: 4.75rem;
             width: 100%;
             height: 100%;
             color: #fff;
+            @media (max-width: 768px) {
+                display: block;
+                padding: 2rem;
+            }
 
             .pinnedSections__feature {
                 color: var(--Primary, #3c98ed);
@@ -45,9 +49,20 @@
                 font-weight: 400;
                 font-size: var(--Scale-M, 1.125rem);
                 line-height: var(--Line-Height-Body-B1, 1.6875rem);
+                ul {
+                    margin-top: 3rem;
+                }
             }
             img {
-margin: 0 auto;
+                display: block;
+                margin: 0 auto;
+                width: 80%;
+                @media (min-width: 451px) {
+                    width: 55%;
+                }
+                @media screen and (min-width: 992px) {
+                    width: 100%;
+                }
             }
         }
     }
