--- a/assets/styles/organisms/_footer.scss
+++ b/assets/styles/organisms/_footer.scss
@@ -35,9 +35,9 @@
     -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 16px 16px 0px 0px;
-    background: $color-dark;
-    padding: 0.625rem 1.875rem var(--Spacing-0, 0rem) 1.875rem;
-    color: #a3bbdc;
+    background-color: $color-black;
+    padding: 3rem 4rem;
+    color: $color-light;
     text-align: center;
     @include breakpoint(laptop) {
         text-align: inherit;
@@ -66,14 +66,15 @@
     }
 
     &__logo {
-        width: 3rem;
+        margin-bottom: 1rem;
+        width: 11rem;
     }
 
     &__bottom {
         margin-top: 15px;
-        border-top: 1px solid rgba(255, 255, 255, 0.25);
+        border-top: 1px solid rgba($color: $color-light, $alpha: 0.25);
         padding: 15px 0;
-        color: rgba(255, 255, 255, 0.25);
+        color: rgba($color: $color-light, $alpha: 0.25);
 
         p {
             margin-bottom: 0;
