--- a/assets/styles/organisms/_header.scss
+++ b/assets/styles/organisms/_header.scss
@@ -9,11 +9,33 @@
 .menu-item {
     cursor: pointer;
 }
-.header__area {
-    -webkit-box-shadow: 0px 16px 32px rgba(25, 86, 168, 0.1);
-    box-shadow: 0px 16px 32px rgba(25, 86, 168, 0.1);
-    background: #fff;
 
+.header--frontpage {
+    display: grid;
+    position: relative;
+    place-items: center;
+    background: var(--Dark-20_131327, #131327);
+    padding: 3.5rem 2.5rem 6rem;
+    height: 45rem;
+    color: $color-light;
+    text-align: center;
+    .header__container {
+        z-index: 1;
+        max-width: 900px;
+    }
+    .header__title,
+    .header__description {
+        margin-bottom: 1.5rem;
+        color: $color-light;
+    }
+    svg {
+        position: absolute;
+        bottom: 0;
+        z-index: 0;
+    }
+}
+.header__area {
+    background-color: $color-black;
     .navbar-brand {
         height: 2.5rem;
 
@@ -29,6 +51,7 @@
     .nav-link {
         margin: 0 30px;
         isolation: isolate;
+        color: $color-light;
         font-size: 0.85rem;
         letter-spacing: 0.5px;
         text-transform: uppercase;
@@ -44,7 +67,7 @@
         border: 0;
         border-radius: 16px;
         background: transparent;
-        background: #ffffff;
+        background: $color-light;
         padding: 10px 26px;
         min-width: auto;
         &::before {
@@ -55,7 +78,7 @@
                 left: 50%;
                 transform: translate(-50%, 0);
                 border-right: 9px solid transparent;
-                border-bottom: 13px solid #fff;
+                border-bottom: 13px solid $color-light;
                 border-left: 9px solid transparent;
                 width: 13px;
                 height: 9px;
@@ -93,7 +116,7 @@
                 -webkit-transition: 0.2s;
                 transition: 0.2s;
                 margin: 12px 0;
-                color: $color-tertiary;
+
                 font-size: 0.85rem;
                 font-family: $text-ff;
                 letter-spacing: 0.5px;
@@ -113,7 +136,7 @@
         &:hover,
         &.active {
             cursor: pointer;
-            background-color: #fff;
+            background-color: $color-light;
             color: $color-secondary;
         }
     }
@@ -136,7 +159,7 @@
             -webkit-box-shadow: 0px 16px 32px rgba(25, 86, 168, 0.1);
             box-shadow: 0px 16px 32px rgba(25, 86, 168, 0.1);
             border-radius: 7px;
-            background: #ffffff;
+            background: $color-light;
             color: var(--orange);
             &::after {
                 -webkit-transform: rotate(180deg);
@@ -147,11 +170,49 @@
     }
 
     .navbar-toggler {
-        border-color: var(--orange);
+        position: relative;
+        margin-left: 0.5rem;
+        outline: 0;
+        box-shadow: none;
+        border: 0;
+        padding: 0;
+        width: 25px;
+        height: 5px;
+        &:not(.collapsed) {
+            .bar {
+                &:nth-of-type(1) {
+                    top: 0;
+                    transform: rotate(-45deg) scaleX(1.1);
+                }
+                &:nth-of-type(2) {
+                    opacity: 0;
+                }
+                &:nth-of-type(3) {
+                    top: 0;
+                    transform: rotate(45deg) scaleX(1.1);
+                }
+            }
+        }
+        .bar {
+            position: absolute;
+            transition: 0.5s;
+            border-radius: 2px;
+            background-color: #fff;
+            width: 100%;
+            height: 50%;
+            &:nth-of-type(1) {
+                top: -200%;
+            }
+            &:nth-of-type(2) {
+                top: 0%;
+            }
+            &:nth-of-type(3) {
+                top: 200%;
+            }
+        }
     }
-
-    .navbar-toggler-icon {
-        background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 136, 51, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+    input {
+        display: none;
     }
 
     .navbar-collapse {
@@ -161,7 +222,6 @@
         left: 0;
         -webkit-box-shadow: 0px 16px 32px rgba(25, 86, 168, 0.1);
         box-shadow: 0px 16px 32px rgba(25, 86, 168, 0.1);
-        background: #fff;
         @include breakpoint(laptop) {
             position: relative;
             top: 0;
