--- a/assets/styles/organisms/_footer.scss
+++ b/assets/styles/organisms/_footer.scss
@@ -22,6 +22,7 @@
 
             a {
                 color: $color-primary;
+                font-size: 1.5rem !important;
 
                 &:hover {
                     color: $color-primary-darker;
@@ -36,18 +37,11 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 16px 16px 0px 0px;
     background-color: $color-black;
-    padding: 3rem 4rem;
+    padding: 3rem 4rem 0;
     color: $color-light;
     text-align: center;
     @include breakpoint(laptop) {
         text-align: inherit;
-    }
-    ul {
-        display: flex;
-        gap: 0.625rem;
-        @include breakpoint(mobile) {
-            flex-direction: column;
-        }
     }
 
     ul,
