--- a/assets/styles/organisms/_footer.scss
+++ b/assets/styles/organisms/_footer.scss
@@ -43,7 +43,13 @@
     @include breakpoint(laptop) {
         text-align: inherit;
     }
-
+    .menu-footer-container .menu {
+        display: grid;
+        grid-template-rows: repeat(3, 1fr);
+        grid-template-columns: repeat(2, 1fr);
+        grid-column-gap: 24px;
+        grid-row-gap: 0px;
+    }
     ul,
     li {
         margin-bottom: 0;
