--- a/blocks/Layering/style.css
+++ b/blocks/Layering/style.css
@@ -17,7 +17,10 @@
             gap: 1.5rem;
             border: none;
             border-radius: 10px;
-            background: linear-gradient(180deg, #2d2d50 -12.32%, #131327 110.05%);
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-position: 100%;
+            background-image: url(./img/World-Lines.svg), linear-gradient(180deg, #2d2d50 -12.32%, #131327 110.05%);
             padding: 4.75rem;
             width: 100%;
             height: 100%;
