--- a/assets/styles/templates/_blog.scss
+++ b/assets/styles/templates/_blog.scss
@@ -39,6 +39,7 @@
             padding-top: 60%;
             width: 100%;
             overflow: hidden;
+            color: transparent !important;
             img {
                 position: absolute;
                 inset: 0%;
