Mise à jour du style du bloc Layering pour afficher une image de fond et un dégradé linéaire

--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -77,6 +77,9 @@ html {
 }
 
 body {
+    background-image: url(../images/heptagone.svg);
+    background-position: 0 100%;
+    background-repeat: no-repeat;
     background-color: $color-light;
     color: $text-c;
     font-size: 1rem;
