--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -46,7 +46,7 @@
 // @import "./molecules/_contact-form";
 // @import "./molecules/_gallery";
 // @import "./molecules/_modal";
-// @import "./molecules/_navigation";
+@import "./molecules/_navigation";
 @import "./molecules/_pagination";
 // @import "./molecules/_pop-over";
 // @import "./molecules/_search-form";
