--- a/blocks/Faq/style.css
+++ b/blocks/Faq/style.css
@@ -1,13 +1,18 @@
 .faq-section {
+    margin: 0 30px;
+    border-radius: var(--32, 2rem);
+    background: var(--Gradient-1, linear-gradient(180deg, #2d2d50 -12.32%, #131327 110.05%));
+    padding: 2rem 0;
     .panel-faq {
-        padding: 0px;
         display: none; /* Initially hide the panel */
-        background-color: white;
-        overflow: hidden;
-        width: 100%; /* Make the panel take up the full width */
         box-sizing: border-box; /* Include padding in the element's total width and height */
+        padding: 0px;
+        width: 100%; /* Make the panel take up the full width */
+        overflow: hidden;
     }
-
+    .faq-section__title {
+        color: #f2f7ff;
+    }
     &.active .panel-faq {
         display: block;
     }
@@ -16,48 +21,46 @@
         border-bottom: 1px solid #ccc;
     }
     .faq-answer {
-        margin-bottom: 10px;
         display: flex;
         flex-wrap: wrap;
+        margin-bottom: 10px;
+        color: #f2f7ff;
     }
 }
 .accordion-faq {
+    display: block; /* Ensure each button is on a new line */
+    position: relative; /* Allow positioning of the "+" symbol */
     cursor: pointer;
+    outline: none;
+    border: none;
+    background-color: transparent;
     padding-right: 100px;
     width: 100%; /* Make the accordion buttons take up the full width */
     text-align: left;
-    border: none;
-    background-color: transparent;
-    outline: none;
-    display: block; /* Ensure each button is on a new line */
-    position: relative; /* Allow positioning of the "+" symbol */
 
     &::after {
-        content: "";
-        background-repeat: no-repeat;
-        background-image: url("./img/Plus.svg");
-        background-size: contain;
-        height: 1rem;
-        width: 1rem;
         position: absolute;
-        right: 0px; /* Adjust the position */
         top: 50%;
+        right: 0px; /* Adjust the position */
         transform: translateY(-50%) rotate(0deg); /* Initial rotation */
         transition: transform 0.5s; /* Smooth transition over 1 second */
+        background-image: url("./img/Plus.svg");
+        background-size: contain;
+        background-repeat: no-repeat;
+        width: 1rem;
+        height: 1rem;
+        content: "";
     }
     &.active::after {
         transform: translateY(-50%) rotate(45deg);
-        filter: invert(61%) sepia(10%) saturate(6849%) hue-rotate(326deg) brightness(101%) contrast(101%);
+        filter: invert(52%) sepia(55%) saturate(2856%) hue-rotate(331deg) brightness(116%) contrast(101%);
     }
 
     .faq-question {
         padding-top: 2rem;
         padding-bottom: 2rem;
-        color: #171c60;
-
-        &:hover {
-            font-weight: 600;
-        }
+        color: #f2f7ff;
+        font-weight: 600;
     }
 
     &.active .faq-question {
