Refactor: padding de la faq

--- a/assets/styles/molecules/_navigation.scss
+++ b/assets/styles/molecules/_navigation.scss
@@ -14,6 +14,7 @@
     button.owl-prev,
     button.owl-next {
         padding: 0.9375rem !important;
+        color: $color-primary;
         span {
             font-size: 2rem;
             line-height: 0.5;
