--- a/blocks/Faq/style.css
+++ b/blocks/Faq/style.css
@@ -2,7 +2,7 @@
     margin: 0 30px;
     border-radius: var(--32, 2rem);
     background: var(--Gradient-1, linear-gradient(180deg, #2d2d50 -12.32%, #131327 110.05%));
-    padding: 2rem 0;
+    padding: 3rem 6rem;
     .panel-faq {
         display: none; /* Initially hide the panel */
         box-sizing: border-box; /* Include padding in the element's total width and height */
