--- a/blocks/ServicesSlider/style.css
+++ b/blocks/ServicesSlider/style.css
@@ -4,6 +4,13 @@
     flex-direction: column;
     gap: 1rem;
 }
+
+.sliderServices__item {
+    padding: 1.5rem;
+    color: #fff;
+    border-radius: var(--16, 1rem);
+background: var(--Gradient-1, linear-gradient(180deg, #2D2D50 -12.32%, #131327 110.05%));
+}
     .sliderServices__feature {
         color: var(--Primary, #3c98ed);
         font-weight: 700;
@@ -12,13 +19,8 @@
         text-transform: uppercase;
         margin-bottom: 0;
     }
-    .sliderServices__title {
-        margin-bottom: 0;
-        font-style: normal;
-        font-weight: 600;
-        font-size: var(--Scale-XL, 2rem);
-        line-height: var(--Line-Height-Headline-H2, 2.5rem);
-        letter-spacing: var(--2, 0.125rem);
+    .sliderServices__item__title {
+        color: #fff;
     }
     .sliderServices__desc {
         font-style: normal;
