Refactor: Mise à jour du style du bloc Layering pour afficher une image de fond et un dégradé linéaire

--- a/assets/styles/organisms/_header.scss
+++ b/assets/styles/organisms/_header.scss
@@ -5,7 +5,12 @@
  * @since       heptalytics_1.0.0.0
  *
  */
-
+.right-menu {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    gap: 1rem;
+}
 .menu-item {
     cursor: pointer;
 }
