--- a/assets/styles/organisms/_header.scss
+++ b/assets/styles/organisms/_header.scss
@@ -7,9 +7,12 @@
  */
 .right-menu {
     display: flex;
-    flex-direction: row-reverse;
+
     align-items: center;
     gap: 1rem;
+    @include breakpoint(laptop) {
+        flex-direction: row-reverse;
+    }
 }
 .menu-item {
     cursor: pointer;
@@ -81,9 +84,9 @@ li.menu-item-gtranslate {
             width: 100%;
             height: 100%;
             object-fit: contain;
-            @include breakpoint(mobile) {
-                width: 121px;
-            }
+            // @include breakpoint(mobile) {
+            //     width: 121px;
+            // }
         }
     }
     .nav-link {
@@ -95,6 +98,11 @@ li.menu-item-gtranslate {
         text-transform: uppercase;
         &.active {
             color: $color-primary;
+        }
+        &.lang__switcher {
+            @include breakpoint(mobile) {
+                margin: 0;
+            }
         }
     }
 
