--- a/blocks/Layering/style.css
+++ b/blocks/Layering/style.css
@@ -1,7 +1,7 @@
 .pinnedSections__wrapper {
     position: relative;
     margin-top: 50px;
-    padding: 90px 0;
+    padding: 90px 0 0;
     height: auto;
 
     .pinnedSections {
