--- a/blocks/BenefitsSlider/style.css
+++ b/blocks/BenefitsSlider/style.css
@@ -1,5 +1,8 @@
 .sliderBenefits {
-    margin-bottom: 5rem;
+    margin-bottom: 2rem;
+    @media screen and (min-width: 768px) {
+        margin-bottom: 5rem;
+    }
 .sliderBenefits__item, .sliderBenefits__content {
         display: flex;
     flex-direction: column;
