--- a/blocks/StatsSlider/style.css
+++ b/blocks/StatsSlider/style.css
@@ -1,5 +1,8 @@
 .statsSlider {
-    margin-bottom: 100px;
+    margin-bottom: 2rem;
+    @media screen and (min-width: 768px) {
+            margin-bottom: 5rem;
+    }
 
     .statsSlider__feature {
         margin-bottom: 0;
