--- a/blocks/Testimonials/style.css
+++ b/blocks/Testimonials/style.css
@@ -1,39 +1,44 @@
 .testimonial {
-    margin-top: -100px;
-    padding: 4.75rem ;
+    margin-top: -50px;
+    border-radius: var(--32, 2rem);
+    background: var(--Gradient-1, linear-gradient(180deg, #2d2d50 -12.32%, #131327 110.05%));
+    padding: 2rem;
     color: #fff;
-border-radius: var(--32, 2rem);
-background: var(--Gradient-1, linear-gradient(180deg, #2D2D50 -12.32%, #131327 110.05%));
-.testimonial__title {
-    color: var(--Primary, #3C98ED);
-/* Headlines/H4 */
-font-family: var(--Font-Family-Headline, "Plus Jakarta Sans");
-font-size: var(--Scale-XS, 0.875rem);
-font-style: normal;
-font-weight: 700;
-line-height: var(--Line-Height-Headline-H4, 1.6875rem); /* 192.857% */
-letter-spacing: var(--4, 0.25rem);
-text-transform: uppercase;
-}
+    @media screen and (min-width: 768px) {
+margin-top: -100px;
+padding: 4.75rem;
 
-.metric__card {
-border-radius: var(--16, 1rem);
-border: 1px solid #131327;
-background: rgba(19, 19, 39, 0.28);
-backdrop-filter: blur(4px);
-display: flex;
-padding: var(--32, 2rem);
-flex-direction: column;
-align-items: center;
-gap: var(--32, 2rem);
-align-self: stretch;
-width: 243px;
-.metric__title {
-    color: var(--Neutral-100_FFFFFF, #FFF);
-font-style: normal;
-font-weight: 700;
-line-height: 2rem; /* 100% */
-letter-spacing: 0.175rem;
-}
-}
+    }
+    .testimonial__title {
+        color: var(--Primary, #3c98ed);
+        font-style: normal;
+        font-weight: 700;
+        font-size: var(--Scale-XS, 0.875rem);
+        line-height: var(--Line-Height-Headline-H4, 1.6875rem); /* 192.857% */
+        /* Headlines/H4 */
+        font-family: var(--Font-Family-Headline, "Plus Jakarta Sans");
+        letter-spacing: var(--4, 0.25rem);
+        text-transform: uppercase;
+    }
+
+    .metric__card {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        align-self: stretch;
+        gap: var(--32, 2rem);
+        backdrop-filter: blur(4px);
+        border: 1px solid #131327;
+        border-radius: var(--16, 1rem);
+        background: rgba(19, 19, 39, 0.28);
+        padding: var(--32, 2rem);
+        width: 243px;
+        .metric__title {
+            color: var(--Neutral-100_FFFFFF, #fff);
+            font-style: normal;
+            font-weight: 700;
+            line-height: 2rem; /* 100% */
+            letter-spacing: 0.175rem;
+        }
+    }
 }
