--- a/assets/styles/organisms/_header.scss
+++ b/assets/styles/organisms/_header.scss
@@ -9,9 +9,10 @@
     display: flex;
 
     align-items: center;
-    gap: 1rem;
+    gap: 0.5rem;
     @include breakpoint(laptop) {
         flex-direction: row-reverse;
+        gap: 1rem;
     }
 }
 .menu-item {
@@ -81,8 +82,8 @@ li.menu-item-gtranslate {
 .header__area {
     background-color: $color-black;
     .navbar-brand {
+        margin-right: 0.5rem;
         height: 2.5rem;
-
         img {
             width: 100%;
             height: 100%;
@@ -268,11 +269,12 @@ li.menu-item-gtranslate {
 
     .navbar-collapse {
         position: absolute;
-        top: 64px;
+        top: 57px;
         right: 0;
         left: 0;
         -webkit-box-shadow: 0px 16px 32px rgba(25, 86, 168, 0.1);
         box-shadow: 0px 16px 32px rgba(25, 86, 168, 0.1);
+        background-color: $color-black;
         @include breakpoint(laptop) {
             position: relative;
             top: 0;
