--- a/blocks/Testimonials/style.css
+++ b/blocks/Testimonials/style.css
@@ -29,8 +29,20 @@
             margin: 0 auto;
         }
     }
+
+    .metrics__list {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 1.5rem;
+    }
     .metric__title {
-        font-size: 2.92406rem;
+        font-size: 1.5rem;
+        text-align: center;
+        @media screen and (min-width: 768px) {
+            text-align: left;
+            font-size:3rem;
+
+        }
     }
     .metric__card {
         display: flex;
