Update background color in style.scss and adjust image width and margin in Testimonials block

--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -80,7 +80,7 @@ body {
     background-image: url(../images/heptagone.svg);
     background-position: 0 100%;
     background-repeat: no-repeat;
-    background-color: $color-light;
+    background-color: #fff;
     color: $text-c;
     font-size: 1rem;
     font-family: $text-ff;
