--- a/blocks/Faq/style.css
+++ b/blocks/Faq/style.css
@@ -1,11 +1,11 @@
 .faq-section {
     z-index: 1;
-    border-radius: var(--32, 2rem);
+    border-radius: 1rem;
     background: var(--Gradient-1, linear-gradient(180deg, #2d2d50 -12.32%, #131327 110.05%));
     padding:1.5rem;
-    transform: translateY(-27px);
+
     @media screen and (min-width: 768px) {
-        transform: translateY(-100px);
+
         padding: 3rem 6rem 5rem;
     }
 
