--- a/blocks/Layering/style.css
+++ b/blocks/Layering/style.css
@@ -1,6 +1,6 @@
 .pinnedSections__wrapper {
     position: relative;
-    margin-top: 50px;
+    margin:  0 0 50px 0;
     padding: 90px 0 0;
     height: auto;
 
@@ -16,7 +16,7 @@
             justify-content: center;
             gap: 1.5rem;
             border: none;
-            border-radius: 10px;
+            border-radius: 1rem;
             background-image: url(./img/World-Lines.svg), linear-gradient(180deg, #2d2d50 -12.32%, #131327 110.05%);
             background-position: 100%;
             background-size: contain;
