--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -77,7 +77,7 @@ html {
 }
 
 body {
-    background-image: url(../images/heptagone.svg);
+    background-image: url(../images/heptagone.svg), linear-gradient(180deg, #fff -8.3%, rgba(236, 246, 255, 0.5) 100.04%);
     background-position: 0 100%;
     background-repeat: no-repeat;
     background-color: #fff;
