--- a/blocks/Testimonials/style.css
+++ b/blocks/Testimonials/style.css
@@ -17,7 +17,7 @@
     }
 
     .testimonial__img {
-        margin: 0 auto;
+        margin: 0 auto 1.5rem;
 
         img {
             border: 8px solid rgba(255, 255, 255, 0.2);
