--- a/blocks/BenefitsSlider/style.css
+++ b/blocks/BenefitsSlider/style.css
@@ -20,6 +20,7 @@
         line-height: var(--Line-Height-Headline-H4, 1.6875rem);
         letter-spacing: var(--4, 0.25rem);
         text-transform: uppercase;
+                font-size: .8rem;
     }
     .sliderBenefits__item__title {
         font-weight: 600;
