--- a/assets/styles/atoms/_links.scss
+++ b/assets/styles/atoms/_links.scss
@@ -9,7 +9,7 @@
 a {
     transition: $transition_fast;
     color: $a__linkcolor;
-    text-decoration: $a__textdecoration;
+    text-decoration: $a__textdecoration !important;
 
     &:hover {
         color: $a__hovercolor;
