ajouter des styles pour l'accordéon avec des couleurs personnalisées

--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -1055,3 +1055,29 @@ hr.custom {
 .product_meta {
     display: none;
 }
+
+// accordion
+.wp-block-esab-accordion .esab__head {
+    background-color: #fff !important;
+}
+
+.accordion-f27a841e .wp-block-esab-accordion-child.esab__active_accordion .esab__head,
+.accordion-f27a841e .wp-block-esab-accordion-child.esab__active_accordion .esab__body {
+    background-color: #fff !important;
+}
+
+.accordion-f27a841e .wp-block-esab-accordion-child.esab__active_accordion {
+    border-color: $color-primary !important;
+}
+
+.accordion-f27a841e .wp-block-esab-accordion-child.esab__active_accordion .esab__heading_tag {
+    color: $color-primary !important;
+}
+
+.accordion-f27a841e .wp-block-esab-accordion-child.esab__active_accordion .esab__body {
+    border-color: $color-primary !important;
+}
+
+.accordion-f27a841e .esab__expand svg {
+    fill: $color-primary !important;
+}
