modifier la hauteur de hr.custom en min-height: 73vh

--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -240,7 +240,7 @@ hr.custom {
     position: relative;
     z-index: 2;
     padding: 50px 0 0;
-    height: 73vh;
+    min-height: 73vh;
     overflow: hidden;
 }
 
