supprimer le marqueur de liste pour les éléments de menu et ajuster le sélecteur de langue

--- a/assets/styles/organisms/_header.scss
+++ b/assets/styles/organisms/_header.scss
@@ -15,9 +15,7 @@
 }
 .menu-item {
     cursor: pointer;
-    &::marker {
-        display: none;
-    }
+    list-style: none;
 }
 li.menu-item-gtranslate {
     img {
